Thu May 16 11:12:18 1996  Mark P. Immel <immel@radix.net>
			  and Jim Kingdon  <kingdon@harvey.cyclic.com>

	* client.h, client.c, checkout.c (client_send_expansions):
	Pass an additional parameter indicating where the checkout is
	to occur, to avoid passing the wrong information to send_files().
	* sanity.sh (basicb): New test basicb-cod-1 tests for above fix.

Mon Jul 15 18:26:56 1996  Ian Lance Taylor  <ian@cygnus.com>

	* recurse.c (do_recursion): Require a repository before calling
	Find_Names.
	* repos.c (Name_Repository): Remove sanity checks which spend time
	examining the filesystem.

Mon Jul 15 1996  Jim Kingdon  <kingdon@cyclic.com>

	* client.c (send_file_names): Send file names as they appear
	in CVS/Entries, rather than as specified (in cases where they
	might differ in case).
	(send_fileproc): Use file name from CVS/Entries (vers->entdata->user)
	rather than file name as specified (finfo->file) when available.

Sun Jul 14 15:39:44 1996  Mark Eichin  <eichin@cygnus.com>
			  and Ian Lance Taylor  <ian@cygnus.com>

	Improve diff -N handling of nonexistent tags and removed files.
	* diff.c (enum diff_file): New definition for whole file, moving
	unnamed enum out of diff_fileproc, renaming DIFF_NEITHER to
	DIFF_DIFFERENT, and adding DIFF_SAME.
	(diff): Look through the repository even if only one revision is
	given.
	(diff_fileproc): Change empty_file to be enum diff_file.  If there
	is no user revision, but there is a repository file, treat it as a
	removed file.  Pass empty_file to diff_file_nodiff, and set it
	from the return value.
	(diff_file_nodiff): Change return type to enum diff_file.  Replace
	just_set_rev parameter with enum diff_file empty_file parameter.
	Change handling of a missing tag to return an enum diff_file value
	if empty_files is set, rather than reporting an error.  Free tmp
	if xcmp returns 0.
	* sanity.sh (death2): Add tests for above patches.

Sat Jul 13 19:11:32 1996  Jim Kingdon  <kingdon@harvey.cyclic.com>
